--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "jspdf": "^2.5.1",
     "lucide": "^0.330.0",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
