--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js localhost 3030"
+    "dev": "nodemon ./server.js localhost 3030",
+    "start": "node ./server.js"
   },
   "keywords": [],
   "author": "",
