--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "cloudinary": "^2.0.1",
     "jspdf": "^2.5.1",
     "lucide": "^0.330.0",
     "lucide-react": "^0.330.0",
